@startuml ClassDiag
title EV Charge DZ — Class Diagram (Database-Oriented)

hide circle
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 9
skinparam dpi 180
skinparam backgroundColor #FFFFFF
skinparam nodesep 20
skinparam ranksep 30
skinparam linetype ortho

skinparam class {
  BorderColor #2563EB
  HeaderBackgroundColor #1E3A8A
  FontColor #FFFFFF
  AttributeFontColor #1E293B
  BackgroundColor #EFF6FF
  ArrowColor #64748B
}

' ── Core entities ────────────────────────────────────────────
class Tenant <<table>> {
  +tenant_id : varchar <<PK>>
  name : varchar
  logo : varchar
  accent_color : varchar
  accent_color_dark : varchar
  created_at : timestamp
}

class User <<table>> {
  +user_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  email : varchar <<UNIQUE>>
  password_hash : varchar
  full_name : varchar
  role : UserRole
  status : UserStatus
  privilege_template : varchar
  custom_privileges : json
  created_at : timestamp
  updated_at : timestamp
}

class Privilege <<table>> {
  +privilege_key : varchar <<PK>>
  label : varchar
}

class UserPrivilege <<table>> {
  +user_id : varchar <<FK,PK>>
  +privilege_key : varchar <<FK,PK>>
  granted_at : timestamp
}

class AppUser <<table>> {
  +app_user_id : varchar <<PK>>
  email : varchar <<UNIQUE>>
  password_hash : varchar
  full_name : varchar
  phone : varchar
  rfid_card_number : varchar <<UNIQUE>>
  fcm_token : varchar
  status : UserStatus
  created_at : timestamp
  updated_at : timestamp
}

class Station <<table>> {
  +station_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  name : varchar
  city : varchar
  address : varchar
  status : StationStatus
  latitude : decimal
  longitude : decimal
  current_tariff_dzd_per_kwh : decimal
  created_at : timestamp
  updated_at : timestamp
  deleted_at : timestamp
}

class Connector <<table>> {
  +connector_id : varchar <<PK>>
  station_id : varchar <<FK>>
  connector_code : varchar
  connector_type : varchar
  max_power_kw : decimal
  status : StationStatus
}

class ChargingSession <<table>> {
  +session_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  connector_id : varchar <<FK>>
  app_user_id : varchar <<FK>>
  user_identifier : varchar
  payment_method : PaymentMethod
  start_time : timestamp
  end_time : timestamp
  duration_min : integer
  energy_kwh : decimal
  cost_dzd : decimal
  status : SessionStatus
}

class Ticket <<table>> {
  +ticket_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  created_by_user_id : varchar <<FK>>
  assigned_to_user_id : varchar <<FK>>
  title : varchar
  description : text
  category : TicketCategory
  priority : TicketPriority
  status : TicketStatus
  sla_deadline : timestamp
  created_at : timestamp
  updated_at : timestamp
}

class TicketActivity <<table>> {
  +activity_id : varchar <<PK>>
  ticket_id : varchar <<FK>>
  actor_user_id : varchar <<FK>>
  action : varchar
  details : text
  created_at : timestamp
}

class BillingRecord <<table>> {
  +billing_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  invoice_number : varchar <<UNIQUE>>
  sessions_count : integer
  energy_kwh : decimal
  amount_dzd : decimal
  status : PaymentStatus
  payment_method : PaymentMethod
  processing_time_sec : decimal
  failed : boolean
  billed_at : timestamp
}

class Alert <<table>> {
  +alert_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  station_id : varchar <<FK>>
  ticket_id : varchar <<FK>>
  severity : AlertSeverity
  message : text
  is_read : boolean
  created_at : timestamp
}

class Notification <<table>> {
  +notification_id : varchar <<PK>>
  tenant_id : varchar <<FK>>
  type : NotificationType
  title : varchar
  body : text
  station_id : varchar <<FK>>
  city_filter : varchar
  created_by : varchar <<FK>>
  recipients_count : integer
  created_at : timestamp
}

' ── Relationships ────────────────────────────────────────────
Tenant      "1" -- "0..*" User
Tenant      "1" -- "0..*" Station
Tenant      "1" -- "0..*" ChargingSession
Tenant      "1" -- "0..*" Ticket
Tenant      "1" -- "0..*" BillingRecord
Tenant      "1" -- "0..*" Alert
Tenant      "1" -- "0..*" Notification

User        "1"    -- "0..*" UserPrivilege
User        "0..1" -- "0..*" Ticket : creates >
User        "0..1" -- "0..*" Ticket : assigned to >
User        "0..1" -- "0..*" TicketActivity : actor >
User        "0..1" -- "0..*" Notification : creates >

Privilege   "1"   -- "0..*" UserPrivilege

AppUser     "0..1" -- "0..*" ChargingSession

Station     "1"   -- "1..*" Connector
Station     "1"   -- "0..*" ChargingSession
Station     "1"   -- "0..*" Ticket
Station     "1"   -- "0..*" BillingRecord
Station     "0..1" -- "0..*" Alert
Station     "0..1" -- "0..*" Notification

Connector   "1"   -- "0..*" ChargingSession
Ticket      "1"   -- "0..*" TicketActivity
Ticket      "0..1" -- "0..*" Alert

@enduml
